TP/8/exercicio2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Frase
Rule 1     Frase -> Elementos
Rule 2     Elementos -> Elementos Folder
Rule 3     Elementos -> Folder
Rule 4     Folder -> ID CHAVEDIR empty CHAVEESQ
Rule 5     Folder -> ID CHAVEDIR Subfolder CHAVEESQ
Rule 6     Subfolder -> Folder
Rule 7     Subfolder -> Subfolder SEP Folder
Rule 8     Folder -> ID CHAVEDIR Ficheiro CHAVEESQ
Rule 9     Ficheiro -> ID
Rule 10    Ficheiro -> Ficheiro SEP ID
Rule 11    empty -> <empty>

Terminals, with rules where they appear

CHAVEDIR             : 4 5 8
CHAVEESQ             : 4 5 8
ID                   : 4 5 8 9 10
SEP                  : 7 10
error                : 

Nonterminals, with rules where they appear

Elementos            : 1 2
Ficheiro             : 8 10
Folder               : 2 3 6 7
Frase                : 0
Subfolder            : 5 7
empty                : 4

Parsing method: LALR

state 0

    (0) S' -> . Frase
    (1) Frase -> . Elementos
    (2) Elementos -> . Elementos Folder
    (3) Elementos -> . Folder
    (4) Folder -> . ID CHAVEDIR empty CHAVEESQ
    (5) Folder -> . ID CHAVEDIR Subfolder CHAVEESQ
    (8) Folder -> . ID CHAVEDIR Ficheiro CHAVEESQ

    ID              shift and go to state 4

    Frase                          shift and go to state 1
    Elementos                      shift and go to state 2
    Folder                         shift and go to state 3

state 1

    (0) S' -> Frase .



state 2

    (1) Frase -> Elementos .
    (2) Elementos -> Elementos . Folder
    (4) Folder -> . ID CHAVEDIR empty CHAVEESQ
    (5) Folder -> . ID CHAVEDIR Subfolder CHAVEESQ
    (8) Folder -> . ID CHAVEDIR Ficheiro CHAVEESQ

    $end            reduce using rule 1 (Frase -> Elementos .)
    ID              shift and go to state 4

    Folder                         shift and go to state 5

state 3

    (3) Elementos -> Folder .

    ID              reduce using rule 3 (Elementos -> Folder .)
    $end            reduce using rule 3 (Elementos -> Folder .)


state 4

    (4) Folder -> ID . CHAVEDIR empty CHAVEESQ
    (5) Folder -> ID . CHAVEDIR Subfolder CHAVEESQ
    (8) Folder -> ID . CHAVEDIR Ficheiro CHAVEESQ

    CHAVEDIR        shift and go to state 6


state 5

    (2) Elementos -> Elementos Folder .

    ID              reduce using rule 2 (Elementos -> Elementos Folder .)
    $end            reduce using rule 2 (Elementos -> Elementos Folder .)


state 6

    (4) Folder -> ID CHAVEDIR . empty CHAVEESQ
    (5) Folder -> ID CHAVEDIR . Subfolder CHAVEESQ
    (8) Folder -> ID CHAVEDIR . Ficheiro CHAVEESQ
    (11) empty -> .
    (6) Subfolder -> . Folder
    (7) Subfolder -> . Subfolder SEP Folder
    (9) Ficheiro -> . ID
    (10) Ficheiro -> . Ficheiro SEP ID
    (4) Folder -> . ID CHAVEDIR empty CHAVEESQ
    (5) Folder -> . ID CHAVEDIR Subfolder CHAVEESQ
    (8) Folder -> . ID CHAVEDIR Ficheiro CHAVEESQ

    CHAVEESQ        reduce using rule 11 (empty -> .)
    ID              shift and go to state 7

    empty                          shift and go to state 8
    Subfolder                      shift and go to state 9
    Ficheiro                       shift and go to state 10
    Folder                         shift and go to state 11

state 7

    (9) Ficheiro -> ID .
    (4) Folder -> ID . CHAVEDIR empty CHAVEESQ
    (5) Folder -> ID . CHAVEDIR Subfolder CHAVEESQ
    (8) Folder -> ID . CHAVEDIR Ficheiro CHAVEESQ

    CHAVEESQ        reduce using rule 9 (Ficheiro -> ID .)
    SEP             reduce using rule 9 (Ficheiro -> ID .)
    CHAVEDIR        shift and go to state 6


state 8

    (4) Folder -> ID CHAVEDIR empty . CHAVEESQ

    CHAVEESQ        shift and go to state 12


state 9

    (5) Folder -> ID CHAVEDIR Subfolder . CHAVEESQ
    (7) Subfolder -> Subfolder . SEP Folder

    CHAVEESQ        shift and go to state 13
    SEP             shift and go to state 14


state 10

    (8) Folder -> ID CHAVEDIR Ficheiro . CHAVEESQ
    (10) Ficheiro -> Ficheiro . SEP ID

    CHAVEESQ        shift and go to state 15
    SEP             shift and go to state 16


state 11

    (6) Subfolder -> Folder .

    CHAVEESQ        reduce using rule 6 (Subfolder -> Folder .)
    SEP             reduce using rule 6 (Subfolder -> Folder .)


state 12

    (4) Folder -> ID CHAVEDIR empty CHAVEESQ .

    ID              reduce using rule 4 (Folder -> ID CHAVEDIR empty CHAVEESQ .)
    $end            reduce using rule 4 (Folder -> ID CHAVEDIR empty CHAVEESQ .)
    CHAVEESQ        reduce using rule 4 (Folder -> ID CHAVEDIR empty CHAVEESQ .)
    SEP             reduce using rule 4 (Folder -> ID CHAVEDIR empty CHAVEESQ .)


state 13

    (5) Folder -> ID CHAVEDIR Subfolder CHAVEESQ .

    ID              reduce using rule 5 (Folder -> ID CHAVEDIR Subfolder CHAVEESQ .)
    $end            reduce using rule 5 (Folder -> ID CHAVEDIR Subfolder CHAVEESQ .)
    CHAVEESQ        reduce using rule 5 (Folder -> ID CHAVEDIR Subfolder CHAVEESQ .)
    SEP             reduce using rule 5 (Folder -> ID CHAVEDIR Subfolder CHAVEESQ .)


state 14

    (7) Subfolder -> Subfolder SEP . Folder
    (4) Folder -> . ID CHAVEDIR empty CHAVEESQ
    (5) Folder -> . ID CHAVEDIR Subfolder CHAVEESQ
    (8) Folder -> . ID CHAVEDIR Ficheiro CHAVEESQ

    ID              shift and go to state 4

    Folder                         shift and go to state 17

state 15

    (8) Folder -> ID CHAVEDIR Ficheiro CHAVEESQ .

    ID              reduce using rule 8 (Folder -> ID CHAVEDIR Ficheiro CHAVEESQ .)
    $end            reduce using rule 8 (Folder -> ID CHAVEDIR Ficheiro CHAVEESQ .)
    CHAVEESQ        reduce using rule 8 (Folder -> ID CHAVEDIR Ficheiro CHAVEESQ .)
    SEP             reduce using rule 8 (Folder -> ID CHAVEDIR Ficheiro CHAVEESQ .)


state 16

    (10) Ficheiro -> Ficheiro SEP . ID

    ID              shift and go to state 18


state 17

    (7) Subfolder -> Subfolder SEP Folder .

    CHAVEESQ        reduce using rule 7 (Subfolder -> Subfolder SEP Folder .)
    SEP             reduce using rule 7 (Subfolder -> Subfolder SEP Folder .)


state 18

    (10) Ficheiro -> Ficheiro SEP ID .

    CHAVEESQ        reduce using rule 10 (Ficheiro -> Ficheiro SEP ID .)
    SEP             reduce using rule 10 (Ficheiro -> Ficheiro SEP ID .)

